--- a/app/globals.css
+++ b/app/globals.css
@@ -171,7 +171,7 @@ body {
 .card-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 1rem;
 
